@@ -20,7 +20,7 @@ Install
 
 Copying
 -------
-   Copyright (c) 2002-2003 Ruby-GNOME2 Project Team
+   Copyright (c) 2002-2004 Ruby-GNOME2 Project Team
 
    This program is free software.
    You can distribute/modify this program under the terms of
